js/js.translator/testData/incremental/invalidation/renameFile/main/m.kt
fun box(): String {
    if (foo() != 42) return "Fail"
    return "OK"
}
